fix: overflow only the conv list & polish scrollbar styling

--- a/web/src/routes/root/index.css
+++ b/web/src/routes/root/index.css
@@ -97,7 +97,13 @@
   background-color: var(--bg-primary);
   display: flex;
   flex-direction: column;
+}
+
+.conv-list {
+  display: flex;
+  flex-direction: column;
   overflow: auto;
+  scrollbar-color: var(--border-color) transparent;
 }
 
 .sidemenu ul {
@@ -165,6 +171,7 @@
   flex-direction: column;
   flex-grow: 1;
   overflow: auto;
+  scrollbar-color: var(--border-color) transparent;
   border: 1px solid var(--border-color);
   background-color: var(--bg-secondary);
   position: relative;
